--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "lint-staged": "^7.2.0",
     "markdown-it": "^8.4.1",
     "mkdirp": "^0.5.1",
+    "node-sass": "^4.10.0",
     "null-loader": "^0.1.1",
     "opn-cli": "^3.1.0",
     "pixrem": "^4.0.1",
@@ -106,6 +107,7 @@
     "react-error-overlay": "^4.0.0",
     "react-test-renderer": "^16.4.1",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^0.8.1",
